nat.tf
# Define External IP

# resource "aws_eip" "levelup-nat" {
#     vpc = true
  
# }

# resource "aws_nat_gateway" "levelup-nat-gw" {
#     allocation_id = aws_eip.levelup-nat.id
#     subnet_id = aws_subnet.levelupvpc-public-1.id
#     depends_on = [ aws_internet_gateway.levelup-gw ]
  
# }

resource "aws_route_table" "levelup-private" {
    vpc_id = aws_vpc.levelup_vpc.id

     tags = {
      Name = "levelupvpc-private-1"
    }

  
}

# route assoicite private

resource "aws_route_table_association" "level-private-1-a" {
    subnet_id = aws_subnet.levelupvpc-private-1.id
    route_table_id = aws_route_table.levelup-private.id
  
}


resource "aws_route_table_association" "level-private-2-b" {
    subnet_id = aws_subnet.levelupvpc-private-2.id
    route_table_id = aws_route_table.levelup-private.id
  
}


resource "aws_route_table_association" "level-private-3-c" {
    subnet_id = aws_subnet.levelupvpc-private-3.id
    route_table_id = aws_route_table.levelup-private.id
  
}
